--- a/TODO
+++ b/TODO
@@ -1,1 +1,8 @@
-Whole app working
+userlist
+change nick
+mobile check
+error messages
+reconnect etc
+css cleanup
+key nav, esc close etc
+cross browser check
