--- a/TODO
+++ b/TODO
@@ -1,8 +1,15 @@
 userlist
-change nick
-mobile check
+mobile check *
 error messages
 reconnect etc
 css cleanup
 key nav, esc close etc
 cross browser check
+	safari
+	chrome
+	firefox
+	ie
+	
+	ipad
+		orientation
+	iphone
