updated readme file

--- a/README
+++ b/README
@@ -1,1 +1,9 @@
-Simple forum with Hydna
+#Simple chat forum with hydna#
+
+A chat forum with rooms. Uses [gravatar](http://gravatar.com/) for profile images.
+
+##Setup##
+
+1. Create an account on: [hydna.com](http://hydna.com/).
+2. Enter your resulting details in **forum.js** (**ROOT_URL**).
+3. Upload the behavior files and start chatting.
